tests/parsing/smtlib/poly/errors/163_function_def_bad_ret_sort_1.psmt2
(set-logic ALL)
(define-fun-rec foo (par (a) () _))
