tests/parsing/smtlib/poly/errors/163_function_def_bad_ret_sort_1.expected
File "tests/parsing/smtlib/poly/errors/163_function_def_bad_ret_sort_1.psmt2", line 2, character 32-33:
Error while parsing a function definition, read the reserved word '_',
      but expected a sort for the return type of the function.
